fix text alignment error

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,8 @@
 
 .add-product p {
   color: red;
+  font-size: 14px;
+  text-align: justify;
 }
 
 .product button {
